--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ggizi" ng-controller="AppCtrl" cg-busy="{promise:promise(),templateUrl:'assets/custom-template.html',backdrop:true}">
+<html ng-app="ggizi" ng-controller="AppCtrl">
 <head>
     <title ng-bind="pageTitle"></title>
 
@@ -91,7 +91,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/ngbp/ngbp/issues" ng-click="menuCollapsed = true">
+                    <a href="#" ng-click="menuCollapsed = true">
                         <i class="fa fa-comments"></i>
                         Support
                     </a>
