Ajustes na exibição do histórico de partidas.

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
 
 <div class="container">
 
-    <div ui-view="main" class="ggizi-content"></div>
+    <div ui-view="main" class="ggizi-content animate"></div>
 
 </div>
 
