Remoção da api-key - Projeto agora somente front end.

--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,17 @@
     <meta name="twitter:site" content="@jairoandre">
     <meta name="twitter:title" content="huelol">
     <meta name="twitter:description"
-          content="ggizi! Tudo o que você sempre quis saber sobre o 'League of Legends', mas faltou dedo pra pesquisar.">
+          content="ggizi! Dados e estatísticas sobre LoL de um jeito descomplicado.">
     <meta name="twitter:creator" content="@jairoandre">
     <meta name="twitter:image:src"
           content="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/Octocat.png?1366128846">
-    <meta property="og:title" content="huelol"/>
+    <meta property="og:title" content="ggizi"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://bit.ly/ngBoilerplate"/>
+    <meta property="og:url" content="http://ggizi.com.br"/>
     <meta property="og:image"
           content="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/Octocat.png?1366128846"/>
     <meta property="og:description"
-          content="Informações sobre partidas, campeões e tudo o que importa no League of Legends.">
+          content="ggizi! Dados e estatísticas sobre LoL de um jeito descomplicado.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -82,18 +82,6 @@
                     <a href ui-sref="champion">
                         <i class="fa fa-book"></i>
                         Champion
-                    </a>
-                </li>
-                <li ui-sref-active="active" ng-click="menuCollapsed = true">
-                    <a href ui-sref="about">
-                        <i class="fa fa-info-circle"></i>
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a href="#" ng-click="menuCollapsed = true">
-                        <i class="fa fa-comments"></i>
-                        Support
                     </a>
                 </li>
             </ul>
