--- a/src/index.html
+++ b/src/index.html
@@ -69,19 +69,19 @@
                 <li ui-sref-active="active">
                     <a href ui-sref="home" ng-click="menuCollapsed = true ">
                         <i class="fa fa-home"></i>
-                        Home
+                        Início
                     </a>
                 </li>
                 <li ui-sref-active="active" ng-click="menuCollapsed = true ">
                     <a href ui-sref="summoner">
                         <i class="fa fa-user"></i>
-                        Summoner
+                        Invocador
                     </a>
                 </li>
                 <li ui-sref-active="active" ng-click="menuCollapsed = true">
                     <a href ui-sref="champion">
                         <i class="fa fa-book"></i>
-                        Champion
+                        Campeões
                     </a>
                 </li>
             </ul>
